Archive2/87/ef4aa688ff6f71/output
main.cpp: In function 'int main()':
main.cpp:11:16: error: 'in' was not declared in this scope
     std::array<in, 4> a2 = {1, 2,4, 3};  // never required after =
                ^
main.cpp:11:21: error: template argument 1 is invalid
     std::array<in, 4> a2 = {1, 2,4, 3};  // never required after =
                     ^
main.cpp:11:26: error: invalid type in declaration before '=' token
     std::array<in, 4> a2 = {1, 2,4, 3};  // never required after =
                          ^
main.cpp:11:38: error: scalar object 'a2' requires one element in initializer
     std::array<in, 4> a2 = {1, 2,4, 3};  // never required after =
                                      ^
